# code-review-env

./: .gitignore  Dockerfile  README.md  app.py  client.py  inference.py  openenv.yaml  project.md  pyproject.toml  requirements.txt
code_review_env/: __init__.py  _grade_worker.py  client.py  compat.py  environment.py  graders.py  inference.py  models.py  tasks.py
code_review_env/server/: Dockerfile  __init__.py  app.py  requirements.txt
server/: Dockerfile  __init__.py  app.py  code_review_environment.py
